--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center align-items-center">
   <div class="container">
-    <router-outlet></router-outlet>
+    <router-outlet />
   </div>
 </div>
