--- a/src/app/dashboard/user-item/user-item.component.html
+++ b/src/app/dashboard/user-item/user-item.component.html
@@ -1,9 +1,9 @@
-<li class="py-2 px-1 d-flex justify-content-between align-items-center">
-  <div class="row w-100">
-    <a class="col-4" [routerLink]="'/user/' + user?.id">{{ user?.username }}</a>
-    <div class="col-6">{{ user?.email }}</div>
-    <div class="col-2 text-center">
-      <i class="btn btn-sm cross-btn" (click)="deleteUser.emit()"></i>
-    </div>
+<li class="d-flex align-items-center">
+  <a class="col-4" data-test-id="username" [routerLink]="'/user/' + user?.id">{{
+    user?.username
+  }}</a>
+  <div class="col-7" data-test-id="username">{{ user?.email }}</div>
+  <div class="col-1 text-center">
+    <i class="btn btn-sm cross-btn" (click)="deleteUser.emit()"></i>
   </div>
 </li>
